# cookiecutter-pypackage

./: README.rst  cookiecutter.json  requirements_dev.txt
{{cookiecutter.project_slug}}/: MANIFEST.in  pyproject.toml
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: cli.py  {{cookiecutter.project_slug}}.py
